# market-telegram-bot

./: .env.example  .env.ord.sample  .env.test.example  .flake8  .gitignore  .gitleaks.toml  .lsp.json  .pre-commit-config.yaml  .qwenignore  AUDIT_REPORT.md  BOT_MENUS.md  CATEGORY_FIX_COMPLETE.md  CATEGORY_SUBCATEGORY_INVESTIGATION.md  CELERY_AUDIT.md  CELERY_QUEUE_SEPARATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_SETUP.md  CODE_AUDIT_REPORT.md  CODE_QUALITY_AUDIT.md  CODE_QUALITY_AUDIT_FINAL.md  COMMITS_LAST_24H_DETAILED.txt  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DOCKER_README.md  DOCUMENT_AUTOMATION_SPEC_v1.md  Dockerfile.bot  EXPANDED_ANALYTICS_AND_TARIFFS_PROPOSAL.md  EXPANDED_ANALYTICS_AND_TARIFFS_v2.md  FINAL_TESTING_REPORT.md  FINANCIAL_MODEL_REFERENCE.md  FINANCIAL_MODEL_REFERENCE_v4.2.md  GITHUB_CLEANUP.md  IMPLEMENTATION_PLAN_ACTIVE.md  INSTRUCTIONS.md  LOCAL_CHECKS.md  LOCAL_CHECKS_REPORT.md  MERGE_PLAN.md  (+46 more)
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.yml
.qwen/: PROJECT_SKILLS.md  settings.json
alembic/: env.py
data/: telegram_channels.csv
deploy/: glitchtip-queue.path  glitchtip-queue.service
docker/: Dockerfile.api  Dockerfile.api-contract  Dockerfile.bot  Dockerfile.miniapp  Dockerfile.nginx  Dockerfile.nginx-test  Dockerfile.playwright  Dockerfile.worker  entrypoint.playwright.sh  nginx.conf
docs/: 20260318_17_45_FINAL_REPORT.md  AAA-01_ARCHITECTURE.md  AAA-02_API_REFERENCE.md  AAA-03_DATABASE_REFERENCE.md  AAA-04_SERVICE_REFERENCE.md  AAA-05_FSM_REFERENCE.md  AAA-06_CELERY_REFERENCE.md  AAA-07_FRONTEND_REFERENCE.md  AAA-08_ONBOARDING.md  AAA-09_DEPLOYMENT.md  AAA-09_TESTING_QUALITY.md  AAA-10_DISCREPANCY_REPORT.md  AAA-11_PRODUCTION_FIX_PLAN.md  AAA-12_CONTAINER_STARTUP_DEEP_DIVE.md  ARCHITECTURE.md  CHANGELOG.md  CHANNEL_ADDITION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST_S26.md  DOCKER_README.md  DOC_01_overview.md  DOC_02_data_models.md  DOC_03_ux_and_flows.md  DOC_04_services.md  DOC_05_infrastructure.md  ROADMAP.md  S-26_ACCOUNTING & TAX COMPLIANCE.md  SENTRY_SETUP.md  SPRINT_0_1_REPORT.md  SPRINT_2_AUDIT.md  TEST_MODE_GUIDE.md  api_admin_contracts_example.md  bot_spec_v4.3.json  bot_spec_v4.3.md  cleanup_production_db.sql  qwen_sprint0_prompt.md  qwen_sprint1_prompt.md  qwen_sprint2_prompt.md  qwen_sprint3_prompt.md  qwen_sprint4_prompt.md  (+1 more)
landing/: eslint.config.js  index.html  lighthouserc.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
mini_app/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
nginx/: nginx.conf
reports/: P02_report.json  P03_report.json  P04_report.json  P05_report.json  P06_report.json  P07_report.json  P08_report.json  P09_report.json  P10_report.json  P11_report.json  P12_report.json  P13_report.json  P14_report.json  P14_report.md  P15_report.json  P15_report.md  P16_report.json  P17_report.json  P18_analysis_report.json  P18_analysis_report.md  P18_fix_report.json  SUMMARY.json
scripts/: INSTALL_RSYNC.md  INSTALL_RSYNC_WINDOWS.md  adjust_telegram_proportions.py  analyze_image_grid.py  apply_branch_protection.sh  backfill_subcategories.py  check_forbidden_patterns.sh  check_telegram_requirements.py  create_feedback_table.sql  create_missing_reputation_records.sql  create_session.py  debug_session.py  deploy-from-local.ps1  deploy-from-local.sh  deploy-simple.ps1  deploy-to-server.ps1  deploy-to-server.sh  deploy.sh  extended_queries.py  import_channels.py  install-rsync.ps1  mass_parser.py  normalize_topics.sql  parse_channels.py  process_images.py  resize_for_telegram.py  run-cloudflared.ps1  seed_chats.py  seed_chats_docker.py  setup-cloudflared-auto.ps1  setup-cloudflared.ps1  slice_rekharbor_logos.py  start-cloudflared-named.bat  start-cloudflared.bat  start-ngrok.bat  telethon_auth.py  test-openrouter.js  test_campaign_gen.py  test_classify.py  test_openrouter.py  (+5 more)
src/: __init__.py
tests/: conftest.py  smoke_yookassa.py  test_acceptance_middleware_fail_closed.py  test_api_channel_settings.py  test_api_placements.py  test_billing_service.py  test_billing_service_idempotency.py  test_bmediakit_comparison.py  test_bot_cancel_scenario_consistency.py  test_channel_settings_repo.py  test_constants.py  test_counter_offer_flow.py  test_escrow_payouts.py  (+6 more)
(+1654 files in other folders)
