[tool.poetry]
name = "market-telegram-bot"
version = "0.1.0"
description = "Telegram bot for advertising campaigns in Telegram chats"
authors = ["tsaguria <tsaguria@example.com>", "belin <belin@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.15.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
asyncpg = "^0.30.0"
redis = "^5.2.1"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
celery = "^5.4.0"
flower = "^2.0.1"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
aiohttp = "^3.11.11"
aiofiles = "^24.1.0"
psycopg2-binary = "^2.9.10"
reportlab = "^4.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
testcontainers = "^4.9.2"
pre-commit = "^4.1.0"
types-aiofiles = "^24.1.0.20240626"
types-redis = "^4.6.0.20241004"
types-python-jose = "^3.3.4.20240106"
types-reportlab = "^4.0.1.20241205"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
