[tool.poetry]
name = "market-telegram-bot"
version = "0.1.0"
description = "Telegram bot for advertising campaigns in Telegram chats"
authors = ["tsaguria <tsaguria@example.com>", "belin <belin@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.15.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
asyncpg = "^0.30.0"
redis = "^5.2.1"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
celery = "^5.4.0"
flower = "^2.0.1"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
aiohttp = "^3.11.11"
aiofiles = "^24.1.0"
psycopg2-binary = "^2.9.10"
reportlab = "^4.3.1"

# Telegram Parser
telethon = "^1.36.0"
python-telegram-bot = "^21.0"

# Content Filter
pymorphy3 = "^2.0.0"
rapidfuzz = "^3.6.0"

# AI Services — Mistral AI (официальный SDK)
mistralai = "^1.12.4"

# TGStat Parser
beautifulsoup4 = "^4.12.3"
httpx = "^0.28.1"

# Payments
yookassa = "^3.2.0"
sentry-sdk = {extras = ["asyncio", "fastapi", "sqlalchemy"], version = "^2.55.0"}

# Server Monitoring
psutil = "^6.1.0"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^5.0.0"
testcontainers = "^4.9.2"
pre-commit = "^4.1.0"
types-aiofiles = "^24.1.0.20240626"
types-redis = "^4.6.0.20241004"
types-python-jose = "^3.3.4.20240106"
types-reportlab = "^4.0.1.20241205"
httpx = {extras = ["socks"], version = "^0.28.1"}
aiosqlite = "^0.22.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP042", "UP046", "B008"]  # UP042: StrEnum, UP046: Generic[T], B008: FastAPI Depends/Query/Field

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
disable_error_code = ["misc", "untyped-decorator", "no-any-return", "type-arg", "no-untyped-def", "unused-ignore", "assignment"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
